# AlexCompiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  debug.natvis
docs/: front-end.md  middle-end.md
src/: CMakeLists.txt  main.cpp
src/ir/: BasicBlock.cpp  BasicBlock.h  Codegen.cpp  Codegen.h  Constant.cpp  Constant.h  Function.cpp  Function.h  IDFCalculator.cpp  IDFCalculator.h  IRBuilder.cpp  IRBuilder.h  Instruction.cpp  Instruction.h  Module.cpp  Module.h  Opcode.h  Value.cpp  Value.h
src/optimizer/: ADCE.cpp  ADCE.h  ArraySSA.cpp  ArraySSA.h  BranchElim.cpp  BranchElim.h  CallGraph.cpp  CallGraph.h  ConstantFolder.cpp  ConstantFolder.h  DCE.cpp  DCE.h  Dominance.cpp  Dominance.h  GVN.cpp  GVN.h  Inliner.cpp  Inliner.h  LICM.cpp  LICM.h  LoopAnalyse.cpp  LoopAnalyse.h  LoopSimplify.cpp  LoopSimplify.h  OSR.cpp  OSR.h  PRE.cpp  PRE.h  PassManager.cpp  PassManager.h  SCCP.cpp  SCCP.h  SSABuilder.cpp  SSABuilder.h  SSAConstructor.cpp  SSAConstructor.h  SSADestructor.cpp  SSADestructor.h  SSALiveness.cpp  SSALiveness.h  (+2 more)
src/parser/: grammar.json.y  parser.cpp  parser.h
src/semantic/: Context.cpp  Context.h  GlobalTable.cpp  GlobalTable.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Type.cpp  Type.h
src/utils/: BitVector.h  Common.h  LoopInfo.h  Node.h  Range.h  SymbolTable.h
test/: CMakeLists.txt  test_SysY.cpp  test_asm.cpp  test_common.h  test_grammar.cpp  test_ir.cpp  test_lexer.cpp  test_node.cpp  test_opt.cpp
test/googletest/docs/: advanced.md
utils/: CMakeLists.txt
utils/patgen/: CMakeLists.txt  arm.target  json.hpp  parser.cpp  (+5 more)
